--- a/aula-1207/index.html
+++ b/aula-1207/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script src='https://cdn.tailwindcss.com'></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-screen h-[100vh] flex flex-col justify-center items-center text-slate-600"></div>
+    <script src='https://cdn.tailwindcss.com'></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
